Add wellness job

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
                 <div class="terminal_text"><strong>Universidad de Sevilla</strong> | Bachelor of Science Degree - Software Engineering | 2008 - 2013</div>
                 <br>
                 <div class="terminal_text"><strong>----- Experiences -----</strong></div>
-                <div class="terminal_text"><strong>GlampingHub</strong> | Front-End | Nov 2018 - Currently | Seville, Spain</div>
+                <div class="terminal_text"><strong>Wellness TechGroup</strong> | Front-End | Jul 2020 - Currently | Seville, Spain</div>
+                <div class="terminal_text">Research and innovate in new technologies.</div>
+                <div class="terminal_text">Design and develop software on the front side.</div>
+                <div class="terminal_text">Define and evaluate functional requirements.</div>
+                <div class="terminal_text">Define and implement development tests on the software.</div>
+                <div class="terminal_text">Document projects developed.</div>
+                <div class="terminal_text">Develop JavaScript apps using React framework.</div>
+                <div class="terminal_text">Use GIT as version control system.</div>
+                <div class="terminal_text"><br></div>
+                <div class="terminal_text"><strong>GlampingHub</strong> | Front-End | Nov 2018 - Jul 2020 | Seville, Spain</div>
                 <div class="terminal_text">Designing and developing an internal app with EmberJS web framework</div>
                 <div class="terminal_text">Using GIT as version control system</div>
                 <div class="terminal_text">Working with a Django REST API</div>
